2010-06-23  Mario Sanchez Prada  <msanchez@igalia.com>

Reviewed by Chris Fleizach.

        [Gtk] nameFromChildren is obsolete
        https://bugs.webkit.org/show_bug.cgi?id=36128

        Added new tests, based on a previous patch by Joanmarie Diggs.

        * platform/gtk/accessibility/name-from-label-expected.txt: Added.
        * platform/gtk/accessibility/name-from-label.html: Added.
2010-06-23  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Chris Fleizach.

        [Gtk] nameFromChildren is obsolete
        https://bugs.webkit.org/show_bug.cgi?id=36128

        Look to the AtkText interface implemented by the objects in
        question.

        Test: platform/gtk/accessibility/name-from-label.html

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (webkit_accessible_get_name):
        (webkit_accessible_table_get_column_description):
        (webkit_accessible_table_get_row_description):

Canonical link: https://commits.webkit.org/52737@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61730 268f45cc-cd09-0410-ab3c-d52691b4dbfc