WebCore/accessibility/gtk/AccessibilityObjectWrapperAtk.cpp
@@ -143,18 +143,7 @@ static AccessibilityObject* core(AtkDocument* document)
     return core(ATK_OBJECT(document));
 }
 
-static const gchar* nameFromChildren(AccessibilityObject* object)
-{
-    if (!object)
-        return 0;
-
-    AccessibilityRenderObject::AccessibilityChildrenVector children = object->children();
-    // Currently, object->stringValue() should be an empty String. This might not be the case down the road.
-    String name = object->stringValue();
-    for (unsigned i = 0; i < children.size(); ++i)
-        name += children.at(i).get()->stringValue();
-    return returnString(name);
-}
+static gchar* webkit_accessible_text_get_text(AtkText* text, gint startOffset, gint endOffset);
 
 static const gchar* webkit_accessible_get_name(AtkObject* object)
 {
@@ -165,8 +154,11 @@ static const gchar* webkit_accessible_get_name(AtkObject* object)
     AccessibilityRenderObject* renderObject = static_cast<AccessibilityRenderObject*>(coreObject);
     if (coreObject->isControl()) {
         AccessibilityObject* label = renderObject->correspondingLabelForControlElement();
-        if (label)
-            return returnString(nameFromChildren(label));
+        if (label) {
+            AtkObject* atkObject = label->wrapper();
+            if (ATK_IS_TEXT(atkObject))
+                return webkit_accessible_text_get_text(ATK_TEXT(atkObject), 0, -1);
+        }
     }
 
     if (renderObject->isImage() || renderObject->isInputImage()) {
@@ -1495,8 +1487,8 @@ static AtkObject* webkit_accessible_table_get_caption(AtkTable* table)
 static const gchar* webkit_accessible_table_get_column_description(AtkTable* table, gint column)
 {
     AtkObject* columnHeader = atk_table_get_column_header(table, column);
-    if (columnHeader)
-        return returnString(nameFromChildren(core(columnHeader)));
+    if (columnHeader && ATK_IS_TEXT(columnHeader))
+        return webkit_accessible_text_get_text(ATK_TEXT(columnHeader), 0, -1);
 
     return 0;
 }
@@ -1504,8 +1496,8 @@ static const gchar* webkit_accessible_table_get_column_description(AtkTable* tab
 static const gchar* webkit_accessible_table_get_row_description(AtkTable* table, gint row)
 {
     AtkObject* rowHeader = atk_table_get_row_header(table, row);
-    if (rowHeader)
-        return returnString(nameFromChildren(core(rowHeader)));
+    if (rowHeader && ATK_IS_TEXT(rowHeader))
+        return webkit_accessible_text_get_text(ATK_TEXT(rowHeader), 0, -1);
 
     return 0;
 }
